I fixed everyone's work, I win

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -2,7 +2,6 @@
 {% block title %}Admin{% endblock %}
 
 {% block content %}
-
 <div class="container pt-5">
 	<div class="row align-items-center justify-content-center">
 		<div class="col m-2">
@@ -37,7 +36,8 @@
 					<td>0501234567</td>
 					<td>20/5/2020</td>
 					<td><a href="#">View</a></td>
-					<td class="text-center"><button class="btn btn-success text-white m-1">✓</button><button class="btn btn-danger text-white m-1">✗</button></td>
+					<td class="text-center"><button class="btn btn-success text-white m-1">✓</button><button
+							class="btn btn-danger text-white m-1">✗</button></td>
 				</tbody>
 				<tbody>
 					<th scope="row">2</th>
@@ -49,7 +49,8 @@
 					<td>0501234567</td>
 					<td>13/8/2020</td>
 					<td><a href="#">View</a></td>
-					<td class="text-center"><button class="btn btn-success text-white m-1">✓</button><button class="btn btn-danger text-white m-1">✗</button></td>
+					<td class="text-center"><button class="btn btn-success text-white m-1">✓</button><button
+							class="btn btn-danger text-white m-1">✗</button></td>
 				</tbody>
 				<tbody>
 					<th scope="row">3</th>
@@ -61,11 +62,11 @@
 					<td>0501234567</td>
 					<td>5/11/2020</td>
 					<td><a href="#">View</a></td>
-					<td class="text-center"><button class="btn btn-success text-white m-1">✓</button><button class="btn btn-danger text-white m-1">✗</button></td>
+					<td class="text-center"><button class="btn btn-success text-white m-1">✓</button><button
+							class="btn btn-danger text-white m-1">✗</button></td>
 				</tbody>
 			</table>
 		</div>
 	</div>
 </div>
-
 {% endblock %}
