--- a/templates/orgs.html
+++ b/templates/orgs.html
@@ -2,7 +2,6 @@
 {% block title %}Organizations{% endblock %}
 
 {% block content %}
-
 <div class="container padded-top">
 	<div class="row align-items-center justify-content-center">
 		<div class="col m-2">
@@ -13,7 +12,8 @@
 	<div class="row align-items-center justify-content-center">
 		<div class="card-deck padded-top">
 			<div class="card border-dark mb-3 text-center org-cards">
-				<img class="card-img-top" src="https://cdn.expatwoman.com/s3fs-public/styles/full_width_870/public/galleries/636083466698321145.jpg?itok=phomnWiv">
+				<img class="card-img-top"
+					src="https://cdn.expatwoman.com/s3fs-public/styles/full_width_870/public/galleries/636083466698321145.jpg?itok=phomnWiv">
 				<div class="card-body">
 					<h5 class="card-title">Dar El Ber</h5>
 					<a class="btn btn-success" href="#">View Profile</a>
@@ -23,7 +23,8 @@
 				</div>
 			</div>
 			<div class="card border-dark mb-3 text-center org-cards">
-				<img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Flag_of_the_Red_Crescent.svg/800px-Flag_of_the_Red_Crescent.svg.png">
+				<img class="card-img-top"
+					src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Flag_of_the_Red_Crescent.svg/800px-Flag_of_the_Red_Crescent.svg.png">
 				<div class="card-body">
 					<h5 class="card-title">UAE Red Crescent</h5>
 					<a class="btn btn-success" href="#">View Profile</a>
@@ -43,7 +44,8 @@
 				</div>
 			</div>
 			<div class="card border-dark mb-3 text-center org-cards">
-				<img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQ18h1_UAcJl5YUl3rjgQmLby7gV8Hl3joTEg&usqp=CAU">
+				<img class="card-img-top"
+					src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQ18h1_UAcJl5YUl3rjgQmLby7gV8Hl3joTEg&usqp=CAU">
 				<div class="card-body">
 					<h5 class="card-title">Charities Aid Foundation</h5>
 					<a class="btn btn-success" href="#">View Profile</a>
@@ -55,5 +57,4 @@
 		</div>
 	</div>
 </div>
-
 {% endblock %}
