--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,6 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-
 <div class="container pt-5">
 	{% if type == 'user' %}
 	<div class="row align-items-center">
@@ -17,7 +16,8 @@
 			<div class="form-group">
 				<label for="exampleInputEmail1">Email address</label>
 				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-				<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+				<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+					else.</small>
 			</div>
 			<div class="form-group">
 				<label for="exampleInputPassword1">Password</label>
@@ -39,7 +39,8 @@
 			<div class="form-group">
 				<label for="exampleInputEmail1">Email address</label>
 				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-				<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+				<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+					else.</small>
 			</div>
 			<div class="form-group">
 				<label for="exampleInputPassword1">Password</label>
@@ -67,5 +68,4 @@
 	</div>
 	{% endif %}
 </div>
-
 {% endblock %}
