TempUserProfile added. Maybe fixed footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,14 +30,13 @@
 			<a class="btn btn-secondary my-2 my-sm-0 ml-1" href="/register">Register</a>
 		</form>
 	</nav>
-	<div id="main">
+	<div id="main" class="pb-5">
 		{% block content %}{% endblock %}
 	</div>
+	<div style="height: 100px"></div>
+
 	<div class="fluid-container footer">
-		<span class="text-muted">
-			<!--TODO: Create footer-->
-		</span>
+		<small>All rights reserved.</small>
 	</div>
 </body>
-
 </html>
