--- a/assets/styles.css
+++ b/assets/styles.css
@@ -13,17 +13,19 @@ body {
   height: 100%;
 }
 
-.footer {
+.footer {  
+  position: fixed;
+  left: 0;
+  bottom: 0;
   width: 100%;
-  height: 60px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
+  text-align: center;
 }
 
 /*Inheritance*/
 /*All jumbotrons will
 have a background size like that*/
-.JumboHeaderHome {
+.JumboHeaderHome, JumboHeaderProfile {
   background-size: cover;
 }
 
@@ -32,9 +34,15 @@ have a background size like that*/
   background-image: url(/assets/jumbotronHome.jpg);
 }
 
+/*User Profile Jumbotron*/
+.JumboHeaderProfile{
+  background-image: url(profileBanner.jpg);
+}
+
 /*Form Background*/
 .FormBackground {
   background-image: url(/assets/FormBackground2.jpg);
+  background-size: cover;
 
   /* Full height */
   height: 100%;
