--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 
 <body>
 	<!--TODO: NAVBAR-->
-	<nav class="navbar navbar-light bg-light">
+	<nav class="navbar navbar-light bg-light shadow">
 		<a class="navbar-brand" href="/">Donation Nation</a>
 		<form class="form-inline">
 			<!-- TODO: ADD DYNAMIC CODE FOR LOGIN-->
