--- a/templates/main.html
+++ b/templates/main.html
@@ -11,7 +11,7 @@
 </div>
 
 <!-- * About This Project * -->
-<div class="container bg-light p-3">
+<div class="container bg-light p-3 shadow">
 	<div class="row">
 		<!-- The text -->
 		<div class="col-sm">
@@ -32,13 +32,13 @@
 	</div>
 </div>
 <!-- * How it Works * -->
-<div class="container p-3">
+<div class="container pt-5">
 	<h1>How Does It Work?</h1>
-	<img src="/assets/steps.png" class="img-fluid img-thumbnail images">
+	<img src="/assets/steps.png" class="img-fluid img-thumbnail images shadow">
 </div>
 
 <!--Last thing-->
-<div class="container p-3 mb-5">
+<div class="container pt-5 mb-5">
 	<h1>Register Now!</h1>
 	<hr />
 	<div class="row">
