--- a/assets/styles.css
+++ b/assets/styles.css
@@ -11,21 +11,23 @@ html {
 body {
   margin-bottom: 60px; /* Margin bottom by footer height */
   height: 100%;
+  background-color: #F4F5F1;
 }
 
-.footer {  
+.footer {
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #f5f5f5;
+  background-color: #b9b9b9;
   text-align: center;
 }
 
 /*Inheritance*/
 /*All jumbotrons will
 have a background size like that*/
-.JumboHeaderHome, JumboHeaderProfile {
+.JumboHeaderHome,
+JumboHeaderProfile {
   background-size: cover;
 }
 
@@ -35,7 +37,7 @@ have a background size like that*/
 }
 
 /*User Profile Jumbotron*/
-.JumboHeaderProfile{
+.JumboHeaderProfile {
   background-image: url(profileBanner.jpg);
 }
 
@@ -54,7 +56,7 @@ have a background size like that*/
 }
 
 .login-cards {
-  width: 300px
+  width: 300px;
 }
 
 .org-cards {
@@ -71,5 +73,18 @@ have a background size like that*/
 }
 
 #registration {
-  margin-bottom: 10rem!important
+  margin-bottom: 10rem !important;
+}
+
+#navbar {
+  background-color: #232D3D;
+  color: #F4F5F1;
+}
+
+#loginButton {
+
+}
+
+#registerButton {
+  
 }
