--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 		crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 	<!-- * Custom Files -->
 	<link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" />
@@ -22,13 +23,15 @@
 
 <body>
 	<!--TODO: NAVBAR-->
-	<nav class="navbar navbar-light bg-light shadow">
-		<a class="navbar-brand" href="/">Donation Nation</a>
-		<form class="form-inline">
-			<!-- TODO: ADD DYNAMIC CODE FOR LOGIN-->
-			<a class="btn btn-info my-2 my-sm-0 mr-1" href="/login">Login</a>
-			<a class="btn btn-secondary my-2 my-sm-0 ml-1" href="/register">Register</a>
-		</form>
+	<nav class="animate__animated animate_fadeInDown navbar navbar-dark shadow" id="navbar">
+		<div class="container">
+			<a class="navbar-brand" href="/" style="outline: none; color: #F4F5F1;">Donation Nation</a>
+			<form class="form-inline">
+				<!-- TODO: ADD DYNAMIC CODE FOR LOGIN-->
+				<a class="btn btn-info my-2 my-sm-0 mr-1" id="loginButton" href="/login">Login</a>
+				<a class="btn btn-secondary my-2 my-sm-0 ml-1" id="registerButton" href="/register">Register</a>
+			</form>
+		</div>
 	</nav>
 	<div id="main" class="pb-5">
 		{% block content %}{% endblock %}
@@ -39,4 +42,5 @@
 		<small>All rights reserved.</small>
 	</div>
 </body>
+
 </html>
