--- a/templates/addItem.html
+++ b/templates/addItem.html
@@ -2,7 +2,7 @@
 {% block title %}Donate Item{% endblock %}
 
 {% block content %}
-<div class="FormBackground">
+<div>
     <div class="container pt-5">
         <div class="row align-items-center">
             <div class="col">
