--- a/templates/main.html
+++ b/templates/main.html
@@ -46,7 +46,10 @@
 		<div class="col-sm text-center">
 			<h2 align="center">Are you a user wishing to use our organization?</h2>
 			<div class="p-3">
-				<a class="btn btn-primary btn-lg" href="/register?type=user">Register as User</a>
+				<a class="btn btn-primary btn-lg" href="/register?type=user">
+					<i class="fas fa-user"></i>
+					Register as User
+				</a>
 			</div>
 		</div>
 
@@ -54,7 +57,10 @@
 		<div class="col-sm text-center">
 			<h2 align="center">Are you an organization wishing to use our platform?</h2>
 			<div class="p-3">
-				<a class="btn btn-primary btn-lg" href="/register?type=org">Register as Organization</a>
+				<a class="btn btn-primary btn-lg" href="/register?type=org">
+					<i class="fas fa-globe"></i>
+					Register as Organization
+				</a>
 			</div>
 		</div>
 	</div>
