--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,15 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 		crossorigin="anonymous"></script>
+
+	<!-- * Animate.css * -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+	<!-- * Google Font * -->
+	<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+
+	<!-- * Font Awesome * -->
+	<script src="https://kit.fontawesome.com/9e953bcb34.js" crossorigin="anonymous"></script>
 
 	<!-- * Custom Files -->
 	<link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" />
@@ -25,11 +33,20 @@
 	<!--TODO: NAVBAR-->
 	<nav class="animate__animated animate_fadeInDown navbar navbar-dark shadow" id="navbar">
 		<div class="container">
-			<a class="navbar-brand" href="/" style="outline: none; color: #F4F5F1;">Donation Nation</a>
+			<a class="navbar-brand" href="/" style="outline: none; color: #F4F5F1;">
+				<img src="{{ url_for('static', filename='transparentLogo.png') }}" width="30" height="30"
+					class="d-inline-block align-top" alt="" loading="lazy">
+				Donation Nation</a>
 			<form class="form-inline">
 				<!-- TODO: ADD DYNAMIC CODE FOR LOGIN-->
-				<a class="btn btn-info my-2 my-sm-0 mr-1" id="loginButton" href="/login">Login</a>
-				<a class="btn btn-secondary my-2 my-sm-0 ml-1" id="registerButton" href="/register">Register</a>
+				<a class="btn btn-info my-2 my-sm-0 mr-1" id="loginButton" href="/login">
+					<i class="fas fa-sign-in-alt"></i>
+					Login
+				</a>
+				<a class="btn btn-secondary my-2 my-sm-0 ml-1" id="registerButton" href="/register">
+					<i class="fas fa-user-plus"></i>
+					Register
+				</a>
 			</form>
 		</div>
 	</nav>
