--- a/templates/orgs.html
+++ b/templates/orgs.html
@@ -14,9 +14,10 @@
 			<div class="card border-dark mb-3 text-center org-cards">
 				<img class="card-img-top"
 					src="https://cdn.expatwoman.com/s3fs-public/styles/full_width_870/public/galleries/636083466698321145.jpg?itok=phomnWiv">
+					<hr />
 				<div class="card-body">
 					<h5 class="card-title">Dar El Ber</h5>
-					<a class="btn btn-success" href="#">View Profile</a>
+					<a class="btn btn-primary" href="#">View Profile</a>
 				</div>
 				<div class="card-footer">
 					<p class="card-text"><small class="text-muted">Member since June, 2019</small></p>
@@ -25,9 +26,10 @@
 			<div class="card border-dark mb-3 text-center org-cards">
 				<img class="card-img-top"
 					src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Flag_of_the_Red_Crescent.svg/800px-Flag_of_the_Red_Crescent.svg.png">
+					<hr />
 				<div class="card-body">
 					<h5 class="card-title">UAE Red Crescent</h5>
-					<a class="btn btn-success" href="#">View Profile</a>
+					<a class="btn btn-primary" href="#">View Profile</a>
 				</div>
 				<div class="card-footer">
 					<p class="card-text"><small class="text-muted">Member since June, 2019</small></p>
@@ -35,9 +37,10 @@
 			</div>
 			<div class="card border-dark mb-3 text-center org-cards">
 				<img class="card-img-top" src="https://www.globalgiving.org/share/dfltpict.jpg?t=1425052995000">
+				<hr />
 				<div class="card-body">
 					<h5 class="card-title">Global Giving</h5>
-					<a class="btn btn-success" href="#">View Profile</a>
+					<a class="btn btn-primary" href="#">View Profile</a>
 				</div>
 				<div class="card-footer">
 					<p class="card-text"><small class="text-muted">Member since June, 2019</small></p>
@@ -46,9 +49,10 @@
 			<div class="card border-dark mb-3 text-center org-cards">
 				<img class="card-img-top"
 					src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQ18h1_UAcJl5YUl3rjgQmLby7gV8Hl3joTEg&usqp=CAU">
+					<hr />
 				<div class="card-body">
 					<h5 class="card-title">Charities Aid Foundation</h5>
-					<a class="btn btn-success" href="#">View Profile</a>
+					<a class="btn btn-primary" href="#">View Profile</a>
 				</div>
 				<div class="card-footer">
 					<p class="card-text"><small class="text-muted">Member since June, 2019</small></p>
