Added a bunch of things

--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -43,6 +43,7 @@
                     <p>elonMuskIsBoss@tesla.com</p>
                 </div>
             </div>
+            <hr />
             <div class="row">
                 <!--City-->
                 <div class="col">
@@ -88,11 +89,11 @@
     </div>
 </div>
 <!-- Change Password Modal -->
-<div class="modal fade" id="changePassword" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="changePassword" tabindex="-1" aria-labelledby="changePassword" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Change Password</h5>
+                <h5 class="modal-title" id="changePassword">Change Password</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
