--- a/templates/orgProfile.html
+++ b/templates/orgProfile.html
@@ -2,7 +2,7 @@
 {% block title %}Organization Profile{% endblock %}
 
 {% block content %}
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid JumboHeaderProfile">
 	<div class="container">
 		<h2 class="display-1">Red Crescent</h2>
         <p class="lead" id=intro>This is your information. It is what donors see when they view your information.</p>
@@ -89,7 +89,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="changePassword">Change Password</h5>
+                <h5 class="modal-titlefont-weight-bold" id="changePassword">Change Password</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
