--- a/templates/viewUser.html
+++ b/templates/viewUser.html
@@ -2,7 +2,7 @@
 {% block title %}view User{% endblock %}
 
 {% block content %}
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid JumboHeaderView">
 	<div class="container">
 		<h2 class="display-1">User Information</h2>
         <p class="lead" id=intro>You are viewing <strong> Elon Musk's</strong> details.</p>
