--- a/templates/addItem.html
+++ b/templates/addItem.html
@@ -2,14 +2,14 @@
 {% block title %}Donate Item{% endblock %}
 
 {% block content %}
-<div>
-    <div class="container pt-5">
-        <div class="row align-items-center">
-            <div class="col">
-                <p class="text-center display-4">Donate an Item</p>
-                <hr />
-            </div>
-        </div>
+<div class="jumbotron jumbotron-fluid colorSchemeDarkBlue bgColorSchemePink">
+	<div class="container">
+		<h2 class="display-1">Donate Item</h2>
+        <p class="lead" id=intro>Giving is the greatest act of grace.</p>
+	</div>
+</div>
+
+<div class = "pb-5">
         <div class="row justify-content-center align-items-center">
             <form>
                 <div>
