--- a/templates/register.html
+++ b/templates/register.html
@@ -13,6 +13,8 @@
 	<div class="row justify-content-center align-items-center">
 		<form>
 			<p><em>We will never share this information with anyone!</em></p>
+			<h5>User Information</h5>
+			<hr />
 			<div class="form-row">
 				<!-- First Name -->
 				<div class="col-md-6 mb-3">
@@ -42,6 +44,8 @@
 					</label>
 				</div>
 			</div>
+			<h5>Contact Information</h5>
+			<hr />
 			<!-- Address -->
 			<div class="form-row">
 				<!-- City -->
@@ -156,6 +160,8 @@
 			<form>
 				<p><em>We will never share this information with anyone!</em></p>
 				<!--Organization Name-->
+				<h5>Organization Information</h5>
+				<hr />
 				<div class="form-group">
 					<label for="validationTooltip01">Organization Name</label>
 					<input type="text" class="form-control" id="validationTooltip01" placeholder="Charity Organization"
@@ -173,6 +179,8 @@
 					<div class="valid-tooltip">Looks good!</div>
 				</div>
 				<!-- Address -->
+				<h5>Contact Information</h5>
+				<hr />
 				<div class="form-row">
 					<!-- City -->
 					<div class="col-md-4 mb-3">
