--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -2,7 +2,7 @@
 {% block title %}User Profile{% endblock %}
 
 {% block content %}
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid JumboHeaderProfile">
 	<div class="container">
 		<h2 class="display-1">Hello, Elon!</h2>
         <p class="lead" id=intro>This is your profile page. Organizations can view this page.</p>
@@ -10,7 +10,7 @@
 </div>
 <div class="container pb-5 center-block">
     <div class="card mb-3 bg-light">
-        <h3 class="card-header font-weight-bold text-center">My Account</h3>
+        <h3 class="card-header font-weight-bold text-center colorSchemeWhite bgColorSchemeDarkBlue mb-3">My Account</h3>
         <div class="card-body">
             <h5 class="text-muted text-left">User Information</h5>
             <hr />
@@ -93,7 +93,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="changePassword">Change Password</h5>
+                <h5 class="modal-title font-weight-bold" id="changePassword">Change Password</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -125,13 +125,15 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Edit Information</h5>
+                <h5 class="modal-title font-weight-bold" id="exampleModalLabel">Edit Information</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
                 <div class="form">
+                    <p class="text-center font-weight-bold">User Information</p>
+                    <hr />
                     <div class="form-row">
                         <!-- First Name -->
                         <div class="col-md-6 mb-3">
@@ -153,6 +155,8 @@
                         <input type="date" class="form-control" id="exampleFormControlInput1" value="6/28/1971">
                     </div>
                     <!-- Address -->
+                    <p class="text-center font-weight-bold">Contact Information</p>
+                    <hr />
                     <div class="form-row">
                         <!-- City -->
                         <div class="col-md-4 mb-3">
